<resources>
    <string name="app_name">MD Viewer</string>

    <string name="hello_world">Hello World</string>
    <string name="app_bar_title">MD Viewer</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="notification_header">Notifications</string>
    <string name="for_scrolling_header">For Scrolling</string>

    <!-- Messages Preferences -->
    <string name="text_preference">Any text setting</string>
    <string name="custom_summary_title">Use a custom SummaryProvider</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="start_new_activity">Start New Activity</string>
    <string name="start_web_page">Start Web Page</string>
    <string name="start_new_activity_with_btn">Start new activity</string>
    <string name="start_settings_activity_with_btn">Start settings activity</string>
    <string name="current_theme">current_theme</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="content_description_favorite">Some favorite content</string>
    <string name="content_description_search">search something</string>
    <string name="content_description_more">"tap to see more "</string>
    <string name="app_specific_file_storage">App-specific file storage</string>
    <string name="rx_example">RX example</string>
    <string name="md_viewer">MD Viewer</string>

</resources>